sass/partials/_slides.scss
.intro.section {
	// position: fixed;
	// top: 0;
	// left: 0;
	width: 100%;
	height: 100%;
	z-index: 1000;
	background: #fff;
	color: #000;
}

.fp-tablecell-auto .fp-tableCell {
	height: 100% !important;
	height: 100vh !important;
	display: initial !important;
	vertical-align: initial !important;
}
.section {
	color: white;
	.bg {
		position: absolute;
		width: 100%;
		height: 100%;
		z-index: -2;
		overflow: hidden;
		&-screen {
			z-index: -1;
			position: absolute;
			width: 100%;
			height: 100%;
			background: rgba(0, 0, 0, 0.4);

			&.darker {
				background: rgba(0, 0, 0, 0.6);
			}

			&.lighter {
				background: rgba(0, 0, 0, 0.3);
			}

			&.purple {
				background: rgba(55, 33, 79, 0.6);
			}

			&.black {
				background: #000;
			}
		}
	}
	.inner-frame {
		min-height: 100vh;
		padding: 100px 60px 185px 60px;

		&.centered {
			padding: 185px 60px;
		}
	}

	.slide-title h2 {
		font-size: 40px;
		font-weight: 200;
	}
	.slide-subtitle h3 {
		font-size: 30px;
		font-weight: 200;
		color: rgba(255, 255, 255, 0.75);
		margin-bottom: 0;
	}

	@media screen and (min-width: $medium) {
		.slide-title h2 {
			font-size: 5vw;
		}
		.slide-subtitle h3 {
			font-size: 2.5vw;
		}
	}
}

.drawer-button {
	cursor: pointer;
	width: 80px;
	margin-bottom: 0px;

	&_container {
		position: relative;
		display: flex;
		flex-direction: column;
		text-align: center;

		position: absolute;
		transform: translateX(-50%);
		left: 50%;
		bottom: 0;
		margin-bottom: 60px;
		z-index: 10003;

		img {
			transition: all ease 300ms;
			transform-origin: 45% center;
		}
	}
}
.drawer-close-button {
	opacity: 0;
	position: absolute;
	pointer-events: none;
	top: 0;
	left: 0;
	width: 80px;
	transform: rotate(90deg);
}

.drawer-open .drawer-button_container {
	.drawer-button_label {
		opacity: 0;
	}
	img {
		opacity: 0;
	}
	.drawer-close-button {
		transform: rotate(0);
		opacity: 1;
	}
}

.leftDrawer {
	background: #fff;
	color: #000;
	height: 100vh;
	position: absolute;
	left: 0;
	top: 0;
	transform: translateX(-100%);
	width: 50%;
	z-index: 10002;
	padding: 0 30px;

	overflow-y: scroll;

	.drawer-open & {
		box-shadow: rgb(0, 0, 0) 0px 0px 156px 0px;
	}

	.drawer-title {
		color: $orange;
	}
	p {
		line-height: 1.6;
	}

	hr {
		border-color: #ddd;
		border-width: 1px;
	}
}

.section.intro {
	color: #000;

	$orange: #f27321;

	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	p,
	span,
	.intro-header {
		margin: 0;
		line-height: 1;
	}

	.flex {
		display: flex;
		align-items: center;
		justify-content: center;
	}

	.intro-header,
	.catalyst {
		opacity: 0;
		text-align: center;

		@media screen and (min-width: $medium) {
			font-size: 56px;
			font-size: 6vw;
		}
	}

	#words {
		position: relative;
		display: inline-block;
		// transform: translateY(-40px);
		> span {
			display: none;
		}
	}

	.catalyst {
		cursor: pointer;
		display: none;
		position: absolute;
		width: 100%;
		height: 100%;
		left: 0;
		top: 0;

		svg {
			position: absolute;
			transform: translate(-50%, -50%);
			left: 50%;
			top: 50%;
			height: auto;
			width: auto;
			min-width: 100vw;
			min-height: 100vh;
		}
	}

	#orange_dot,
	#orange_dot2,
	#orange_dot3 {
		transform-origin: center center;
	}
	#orange_dot2 {
		opacity: 0;
		transform-origin: center center;
	}

	#orange_dot3_svg {
		top: 0;
		left: 0;
		position: absolute;
	}

	#intro-chevron {
		position: absolute;
		bottom: 80px;
		left: 50%;
		width: 100px;
		margin-left: -50px;
		opacity: 0;
	}
}

.fp-viewing-ceo {
	#up-down {
		img {
			opacity: 1;
		}
	}
}

[data-section='0'] {
	background-color: #cccccc;
	color: #000;

	hr.medium {
		border-width: 1px;
		border-color: #666666;
	}

	.h3 {
		font-weight: 500;
		line-height: 1.2;
	}
}

[data-section='2'] {
	@media screen and (min-width: 768px) {
		h2 {
			font-size: 48px !important;
		}
	}
}

[data-section='14'] {
	.counter {
		font-size: 40px;
		margin-right: 20px;
	}
}

[data-section='15'] {
	background: white;
	color: #000;
	h2 {
		color: $orange;
	}
}

.photo-credit {
	&-container {
		position: absolute;
		left: 50px;
		bottom: 30px;
	}
	&-trigger {
		cursor: pointer;
		span {
		}
		img {
			width: 10px;
			height: 6px;
		}
	}
}

.photo-credits {
	position: absolute;
	transform: translateY(100%);
	z-index: 9999;
	height: 50px;
	width: 100%;
	left: 0;
	bottom: 0;
	align-items: center;

	padding: 0px 50px;
	background: #fff;
	color: #000;

	display: none;
	h6 {
		margin-bottom: 0;
		font-size: 20px;
	}
	span {
		margin-right: 4px;
	}
	.credit-open & {
		display: flex;
	}
	&:after {
		content: '×';
		position: absolute;
		right: 50px;
		font-size: 32px;
		cursor: pointer;
	}
}

.bg {
	.fore {
		position: absolute;
		top: 0;
		left: 0;
	}
}

[data-closedrawer] {
	position: absolute;
	height: 100%;
	width: 100%;
	z-index: 10001;
	top: 0;
	left: 0;

	display: none;
	.drawer-open & {
		display: block;
	}
}

// parallax
[data-section='1'] {
	.fore {
		transform-origin: bottom center;
	}
}
[data-section='4'] {
	.fore,
	.back {
		transform-origin: bottom left;
	}
}

[data-section='10'] {
	.fore,
	.back {
		transform-origin: center center;
	}
}

[data-section='12'] {
	.bg img {
		transform-origin: top center;
		object-position: top right;
	}
}

